tests/parsing/smtlib/poly/errors/026_let_bad_var_binding_list_1.expected
File "tests/parsing/smtlib/poly/errors/026_let_bad_var_binding_list_1.psmt2", line 2, character 14-15:
2 | (assert (let (_) true))
                  ^
Error while parsing a term, read the reserved word '_',
      but expected a variable binding of the form "(var term)".
